修改文件: _posts/2020-05-21-KICAD学习笔记.md

--- a/_posts/2020-05-21-KICAD学习笔记.md
+++ b/_posts/2020-05-21-KICAD学习笔记.md
@@ -190,9 +190,59 @@ xsltproc -o "%O.csv" "/home/<user>/kicad/eeschema/plugins/bom2csv.xsl" "%I"
 14. 然后，您可以在布置电路板时从下拉菜单中选择布线的宽度。 请参阅下面的示例（英寸）。
 ![enter description here](https://LonlyPan.github.io/images/Posts/2020-05-21-KICAD学习笔记/step-8.png)
 15. 或者，您可以添加一个 网络类。 转到 设计规则 → 网络类编辑器 并添加新类。 这样当我们需要批量指定一类相同类型的布线（如电源类，特殊信号类），就可以在该界面选择该类，并指定该类导线所属网络类，自动批量应用布线规则而不影响到其他布线。
+![enter description here](https://LonlyPan.github.io/images/Posts/2020-05-21-KICAD学习笔记/网络列表.png)
+16. 如果要更改网格大小，右键单击 → 网格。 在放下元件并将它们与轨道连接在一起之前或之后，请务必选择合适的网格尺寸。
+17. 重复此过程，直到连接除 J1 的引脚3之外的所有电线。 您的电路板应如下所示。
+![enter description here](https://LonlyPan.github.io/images/Posts/2020-05-21-KICAD学习笔记/gsik_tutorial1_090.png)
+18. 现在我们将制作一个连接到所有 GND 引脚的接地层。 单击右侧工具栏上的 添加填充区域 图标 ![enter description here](https://LonlyPan.github.io/images/Posts/2020-05-21-KICAD学习笔记/add_zone.png) 。 放置覆铜。
+![enter description here](https://LonlyPan.github.io/images/Posts/2020-05-21-KICAD学习笔记/gsik_tutorial1_100.png)
+19. 单击顶部工具栏上的 执行设计规则检查 图标 ![enter description here](https://LonlyPan.github.io/images/Posts/2020-05-21-KICAD学习笔记/drc.png) 运行设计规则检查器。 点击 开始DRC 。 应该没有错误。 点击 列表未连接 。 应该没有未连接的项目。 单击 确定 关闭 DRC控制 对话框。
+20. 单击 文件 → 保存 保存文件。 要以 3D 方式观察您的电路板，请单击 视图 → 3D 查看器。
+![enter description here](https://LonlyPan.github.io/images/Posts/2020-05-21-KICAD学习笔记/pcbnew_3d_viewer.png)
+21. 你的板是完整的。 要将其发送给制造商，您需要生成所有 Gerber 文件。
+
+### 生成 Gerber 文件
+
+完成 PCB 后，您可以为每一层生成 Gerber 文件，并将它们发送给您最喜欢的 PCB 制造商，他们将为您制作电路板。
+
+从 KiCad，打开 Pcbnew 板编辑器。
+
+点击 **文件 → 绘制** 。 选择 Gerber 作为 绘制格式 并选择放置所有 Gerber 文件的文件夹。 单击 绘制 按钮继续。
+
+单击 `生成钻孔文件`，生成钻孔文件。 
+![enter description here](https://LonlyPan.github.io/images/Posts/2020-05-21-KICAD学习笔记/print.png)
+
+>注意：KiCad 输出的 Gerber 文件当中，后缀名为.drl的文件为钻孔文件，后缀名.pos则代表位置文件。
+
+### 使用 Gerbview
+
+要查看所有 Gerber 文件，请转到 KiCad 项目管理器并单击 GerbView 图标。 在下拉菜单或图层管理器中，选择 图形图层1 。 单击 文件 → 打开 Gerber 文件 或单击图标 ![enter description here](https://LonlyPan.github.io/images/Posts/2020-05-21-KICAD学习笔记/gerber_file.png) 。 选择并打开所有生成的 Gerber 文件。 注意它们如何一个显示在另一个之上。
+
+使用 文件 → 打开 Excellon 钻孔文件 打开钻孔文件。
+
+使用右侧的图层管理器选择/取消选择要显示的图层。 在发送生产之前仔细检查每一层。
+
+该视图与 Pcbnew 类似。 在视图内右键单击并单击 网格 以更改网格。
+
+### 使用 FreeRouter 自动布线
+
+手动布线板既快速又有趣，但对于具有大量元件的电路板，您可能希望使用自动布线器。 请记住，您应首先手动路由关键迹线，然后设置自动布线器以执行无聊位。 它的工作只会解释未布线的痕迹。 我们将在这里使用的自动布线器是 FreeRouting。
+
+1. 从 Pcbnew 单击 文件 → 导出 → Specctra DSN 并在本地保存文件。 启动 FreeRouter 并单击 打开您自己的设计 按钮，浏览 dsn 文件并加载它。
+2. FreeRouter 具有 KiCad 目前不具备的一些功能，包括手动路由和自动路由。 FreeRouter 主要有两个步骤：首先，对电路板进行布线，然后对其进行优化。 完全优化可能需要很长时间，但您可以随时停止它。
+3. 您可以通过单击顶部栏上的 自动布线器 按钮来启动自动路由。 底栏为您提供有关正在进行的路由过程的信息。 如果 通过 计数超过30，则您的电路板可能无法使用此路由器自动执行。 更多地展开您的元件或更好地旋转它们并再试一次。 零件的旋转和位置的目标是降低速率的交叉走线的数量。
+4. 左键单击鼠标可以停止自动路由并自动启动优化过程。 另一次左键单击将停止优化过程。 除非你真的需要停下来，否则最好让 FreeRouter 完成它的工作。
+5. 单击 文件 → 导出 Specctra 会话文件 菜单并使用 .ses 扩展名保存板文件。 您实际上不需要保存 FreeRouter 规则文件。
+6. 回到 Pcbnew。 您可以通过单击 文件 → 导入 → Spectra 会话 并选择 .ses 文件来导入刚刚布线的电路板。
+
+如果有任何您不喜欢的布线，可以使用 \[Delete] 和路由工具删除它并重新路由它，这是 布线 图标 ![enter description here](https://LonlyPan.github.io/images/Posts/2020-05-21-KICAD学习笔记/add_tracks.png)在右侧工具栏上添加。
 
 
 ## 制作原理图符号
+
+有时，您想要放置在原理图中的符号不在 KiCad 库中。 这很正常，没有理由担心。 在本节中，我们将了解如何使用 KiCad 快速创建新的原理图符号。 不过，请记住，您始终可以在互联网上找到 KiCad 元件。
+
+在 KiCad 中，符号是一段以 DEF 开头并以 ENDDEF 结尾的文本。 一个或多个符号通常放在库文件中，扩展名为 .lib。 如果要将符号添加到库文件，只需使用文本编辑器的剪切和粘贴命令即可。
 
 ## 制作元件封装
 
