修改文件: _posts/2020-05-21-KICAD学习笔记.md

--- a/_posts/2020-05-21-KICAD学习笔记.md
+++ b/_posts/2020-05-21-KICAD学习笔记.md
@@ -276,13 +276,12 @@ xsltproc -o "%O.csv" "/home/<user>/kicad/eeschema/plugins/bom2csv.xsl" "%I"
 ## 参考链接
 
 1. [KiCad官方文档](https://docs.kicad-pcb.org/5.1.6/zh/)
+2. [开源 EDA 工具 KiCad 5.1.5 电路设计手册](https://uinika.github.io/Electronics/KiCad.html)
+3. [KiCad基本使用](https://an_kang.gitee.io/2020/ck93pvj620008u0rhh0qaa55i/)  
+4. [KiCad-CN](https://gitee.com/KiCAD-CN)  
+5. [开源 KiCad EDA 中文资料收集整理 (2020-05-15)](https://www.cnblogs.com/F4NNIU/p/KiCad.html)6
+6. [Setting up Library Loader for use with KiCad](https://www.samacsys.com/kicad/)  
 
 
-[Setting up Library Loader for use with KiCad](https://www.samacsys.com/kicad/)  
-[KICAD入门官方](chrome-extension://bocbaocobfecmglnmeaeppambideimao/pdf/viewer.html?file=https://docs.kicad-pcb.org/master/zh/getting_started_in_kicad/getting_started_in_kicad.pdf)  
-[开源 EDA 工具 KiCad 5.1.5 电路设计手册](https://uinika.github.io/electronics/KiCad.html)  
-[KiCad基本使用](https://an_kang.gitee.io/2020/ck93pvj620008u0rhh0qaa55i/)  
-[KiCad-CN](https://gitee.com/KiCAD-CN)  
-[开源 KiCad EDA 中文资料收集整理 (2020-05-15)](https://www.cnblogs.com/F4NNIU/p/KiCad.html)  
-[嵌入式开发常用资料索引](http://www.wujique.com/2020/02/10/%E5%B5%8C%E5%85%A5%E5%BC%8F%E5%BC%80%E5%8F%91%E5%B8%B8%E7%94%A8%E8%B5%84%E6%96%99%E7%B4%A2%E5%BC%95/)  
-[pcb设计工具kicad](https://www.stepfpga.com/doc/pcb%E8%AE%BE%E8%AE%A1%E5%B7%A5%E5%85%B7kicad)  
+
+
