--- a/_posts/2020-05-21-KICAD学习笔记.md
+++ b/_posts/2020-05-21-KICAD学习笔记.md
@@ -3,8 +3,8 @@ layout: post
 show_title: "2020-05-21-KICAD学习笔记"
 title: "2020-05-21-KICAD学习笔记"
 date: 2020-05-21
-last_modified_at: 2020-05-21
-categories: c&c++
+last_modified_at: 2020-05-30
+categories: software
 ---
 
 KiCad 是一个开源软件工具，用于创建电子原理图和 PCB 图形。  
